Add cost flight